# doujin

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: web.yaml
crawler/: ehentai.ts  package.json
scripts/: doujinshi.org.py  fix.py
translations/: package.json
translations/src-tauri/: Cargo.toml  tauri.conf.json
translations/src-tauri/src/: main.rs
web/app/: page.tsx
web/app/books/[id]/: page.tsx
web/app/search/[query]/: page.tsx
web/components/: book-card.tsx  footer.tsx  pagination.tsx  search.tsx
web/lib/: book.ts
